@@ -3,7 +3,10 @@
 // pql_hostctrl.inc
 // phpQLAdmin Application Programming Interface (API)
 //
-// $Id: pql_hostctrl.inc,v 1.1 2006-03-08 14:37:00 turbo Exp $
+// $Id: pql_hostctrl.inc,v 1.2 2006-07-06 15:08:26 turbo Exp $
+
+$LANG = new pql_lang($_pql) or die("Couldn't make a new LANG object");
+require($_SESSION["path"]."/left-head.html");
 
 // {{{ pql_update_sudo(ldap, dn, type, attribute)
 function pql_update_sudo($ldap, $dn, $type, $attribute) {
@@ -27,29 +30,31 @@ function pql_list_expand($role, $alist, $attribute, $extraURL) {
   <div id='<?php echo $role.$attribute; ?>Parent' class='parent'>
     <a href="<?php echo $_SERVER['REQUEST_URI']; ?>"
        onClick="if (capable) {expandBase('<?php echo $role.$attribute; ?>', true); return false;}">
-       <img name='imEx' src='images/plus.png' border='0' alt='+' width='9' height='9' id='<?php echo $role.$attribute; ?>Img'>
-    </a>
+       <img name='imEx' src='images/plus.png' border='0' alt='+' width='9' height='9' id='<?php echo $role.$attribute; ?>Img'></a>
     <?php echo $alist[0]; ?>
     <a href="<?php echo $_SERVER['REQUEST_URI']; ?>&<?php echo $extraURL;?>&<?php echo $attribute; ?>=<?php echo $list[0]; ?>">
-      <img src='images/del.png' width='12' height='12' border='0' alt="<?=$LANG->_('Delete')?> <?php echo $alist[0]; ?> <?=$LANG->_('from Sudo role')?>"></a><br>
+      <img src='images/del.png' width='12' height='12' border='0'></a><br>
   </div>
 
   <div id='<?php echo $role.$attribute; ?>Child' class='child'>
     <nobr>
-<?php for($w = 1; $w < count($alist); $w++) {
+<?php
+  for($w = 1; $w < count($alist); $w++) {
+	$alt_msg = pql_complete_constant($LANG->_('Delete %who% from Sudo role'), array('who' => $alist[$w]));
+
 	print "\t\t" . $alist[$w];
 	print " <a href=\"" . $_SERVER['REQUEST_URI'] . $extraURL;
 	print "&attribute=" . $attribute . "&" . $attribute . "=" . $alist[$w] . "\">";
-	print "<img src='images/del.png' width='12' height='12' border='0' alt=\"Delete ";
-	print $alist[$w] . " from Sudo role\"></a><br>\n";
+	print "<img src='images/del.png' width='12' height='12' border='0' alt=\"$alt_msg\"></a><br>\n";
       }
   } else {
     if(isset($alist)) {
+      $alt_msg = pql_complete_constant($LANG->_('Delete %who% from Sudo role'), array('who' => $alist));
+
       print "\t\t" . $alist;
       print " <a href=\"" . $_SERVER['REQUEST_URI'] . $extraURL;
       print "&attribute=" . $attribute . "&" . $attribute . "=" . $alist . "\">";
-      print "<img src='images/del.png' width='12' height='12' border='0' alt='".$LANG->_('Delete');
-      print $alist . $LANG->_(' from Sudo role') . "'></a>\n";
+      print "<img src='images/del.png' width='12' height='12' border='0' alt=\"$alt_msg\"></a><br>\n";
     } else {
       print "&nbsp;";
     }
